# FarukonAlgoTradingPlatform

./: .gitignore  Cargo.toml  README.md  USER_MANUAL.md  commission_plans.json  instruments_info.json  start.sh
Farukon_2/src/: backtest.rs  data_handler.rs  execution.rs  main.rs  optimizers.rs  portfolio.rs  risks.rs  strategy_loader.rs
Farukon_2_0/: Cargo.toml
Farukon_2_0/src/: backtest.rs  cli.rs  data_handler.rs  execution.rs  main.rs  ohlcv_generated.rs  optimizers.rs  portfolio.rs  risks.rs  stratagy_loader.rs  strategy_loader.rs
Portfolios/: Debug_Portfolio.json
Strategies/: MA_cross.dylib  MA_cross.rs
Tickers/FBS/RTS/: RTS-12.23.idx  RTS-3.24.idx
Tickers/FBS/Si/: Si-12.23.idx  Si-3.24.idx
farukon_core/: Cargo.toml
farukon_core/src/: commission_plans.rs  data_handler.rs  event.rs  execution.rs  index.rs  indicators.rs  instruments_info.rs  lib.rs  optimization.rs  performance.rs  portfolio.rs  pos_sizers.rs  settings.rs  strategy.rs  utils.rs
opt_results/MA_cross/: optimization_results.csv
opt_results/MA_cross_Si_5min/: optimization_results.csv
portfolios/: MA_cross_Portfolio.json
strategy_lib/: Cargo.toml
strategy_lib/src/: lib.rs
