[package]
name = "Farukon_2_0"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.0"
csv = "1.3.1"
rayon = "1.10.0"
memmap2 = "0.9.7"
bincode = "1.3.3"
anyhow = "1.0.99"
libloading = "0.8"
num_cpus = "1.17.0"
serde_json = "1.0.143"
flatbuffers = "25.2.10"
farukon_core = { path = "../farukon_core" }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
