[package]
name = "farukon_core"
version = "0.1.0"
edition = "2024"

[dependencies]
wide = "0.7"
rand = "0.8"
futures = "0.3"
rayon = "1.10.0"
anyhow = "1.0.99"
itertools = "0.14"
num_cpus = "1.17.0"
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
